[package]
name = "fuzzydatetime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4", default-features=false, features=["clock", "std", "serde"] }
chrono-tz = { version="0.6", features=["serde"] }
icu_calendar = "0.6"