[package]
name = "fuzzydatetime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version="0.4", features=["html_reports"] }

[dependencies]
chrono = { version="0.4", default-features=false, features=["clock", "std", "serde"] }
chrono-tz = { version="0.6", features=["serde"] }
icu_calendar = "1.0.0"

# static
openssl = { version="*", features=["vendored"]}
curl = { version="*", features=["static-curl", "static-ssl"] }
libz-sys = { version = "*", features=["static"] }

[[bench]]
name = "example"
harness = false

[[example]]
name = "static-test"